2011-02-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-stream): Doc fix.

	* gnus-start.el (gnus-get-unread-articles): Don't clobber the async
	retrieval by the no-group selection.

	* gnus-demon.el (gnus-demon-init): run-with-timer should be called with
	numerical parameters.

2011-02-24  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-creation-prompts): New variable to manage
	creation-time prompts.
	(auth-source-search): Document it.
	(auth-source-format-prompt): Add utility function.
	(auth-source-netrc-create): Don't default the user name to
	user-login-name.  Use `auth-source-creation-prompts' and some default
	prompts for user, host, port, and password (the default generic prompt
	remains ugly).
	(auth-source-never-save): Add customizable option to never save info.
	(auth-source-netrc-create): Use it and improve save prompts.  Fix help
	mode excursion.

2011-02-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* auth-source.el (auth-source-netrc-create): Use `read-char' with no
	argument that XEmacs doesn't support.

	* dgnushack.el (dgnushack-compile): Exclude color.el from being
	compiled for Emacsen having no `libxml-parse-html-region' support.

	* gnus-xmas.el (gnus-xmas-define): Remove gnus-x-color-values.

	* lpath.el: Bind buffer-save-without-query for XEmacs.

2011-02-23  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (article-make-date-line): Ignore errors if time is
	invalid and not convertible.
	(article-make-date-line): Only add lapsed time if time is not nil.

2011-02-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-netrc-create): Use `read-char' instead of
	`read-char-choice' for backwards compatibility.
	(auth-source-netrc-element-or-first): New function to DTRT for
	parameter extraction.
	(auth-source-netrc-create): Use it and fix multiple parameter print
	bug.  Use the default passed from above (given-default) or the
	built-in (user-login-name for :user).
