@@ -1,6 +1,8 @@
 2011-02-25  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* nnimap.el (nnimap-stream): Doc fix.
+	(nnimap-open-connection-1): Reverse the order of the ports to that the
+	prompted-for port is first.
 
 	* gnus-start.el (gnus-get-unread-articles): Don't clobber the async
 	retrieval by the no-group selection.
